2008-04-02  Andreas Nahr  <ClassDevelopment@A-SoftTech.com>

	* ProxyAttribute.cs: Fix parameter names

2008-02-10  Sebastien Pouliot  <sebastien@ximian.com>

	* RealProxy.cs: Use 'is' instead of 'as' and a null check. Found 
	using Gendarme new UseIsOperator rule.

2007-05-03  Dick Porter  <dick@ximian.com>

	* ProxyAttribute.cs: 
	* RealProxy.cs: Update to 2.0 profile

2006-07-15  Jonathan Chambers  <joncham@gmail.com>

	* RealProxy.cs: Indicate that all fields need keep in sync
	with definition in object-internals.h for COM Interop.
	
2006-06-18  Zoltan Varga  <vargaz@gmail.com>

	* RealProxy.cs (ProcessResponse): Use t.GetElementType ().IsInstanceOfType () when the type is a byref.

2005-06-22  Lluis Sanchez Gual  <lluis@novell.com>

	* RealProxy.cs: Extract the output arguments from the message's
	Args list (not from OutArgs), since some message objects
	may not support OutArgs (for example, when the target MethodBase is
	not known, there is no way to know which params are out params).
	I've checked that MS.NET behaves in the same way. This fixes
	bug #75277.

2005-06-13  Lluis Sanchez Gual  <lluis@novell.com>

	* RealProxy.cs: Report invalid return type of values using
	InvalidCastException, like MS.NET. Fixes bug #75203.

2004-10-26  Lluis Sanchez Gual  <lluis@novell.com>

	* RealProxy.cs: Added _targetDomainId and _targetUri fields, which are
	used by the new xdomain wrappers. Added GetAppDomainTarget() method,
	which returns the remote object referenced by the proxy.
	* RemotingProxy.cs: Moved _targetUri to RealProxy.

2004-09-27  Lluis Sanchez Gual  <lluis@novell.com>

	* RemotingProxy.cs: In Invoke, suport IMessages other than MonoMessage.
	
2004-09-22  Lluis Sanchez Gual  <lluis@novell.com>

	* RemotingProxy.cs: When attaching a CBO identity, assign the proxy to
	  be used as "this" for method calls.

2004-04-23	Patrik Torstensson

	* RealProxy.cs: Moved async functionlity here, also take
	care of custom proxies (non RemotingProxy) case for async and