@@ -1,3 +1,8 @@
+2009-05-06  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* RealProxy.cs: If async dispatch crashes, don't propagate the
+	exception. The exception will be raised when calling EndInvoke.
+
 2008-04-02  Andreas Nahr  <ClassDevelopment@A-SoftTech.com>
 
 	* ProxyAttribute.cs: Fix parameter names
